--- a/public/Kanbas/Courses/Assignments/index.css
+++ b/public/Kanbas/Courses/Assignments/index.css
@@ -1,10 +1,7 @@
-.breadcrumb-item.active::before {
-  content: " > "; /* override separator; was '/' */
+table tr td {
+  padding-right: 20px;
 }
 
-.breadcrumb-item a {
-  color: #c70000; /* override text color */
+.wd-edit-label {
+  text-align: right;
 }
-
-/* text-transform: uppercase; /* Convert text to uppercase */
-/* font-weight: bold; Set the font weight to bold */
