--- a/src/Kanbas/Courses/Navigation/index.css
+++ b/src/Kanbas/Courses/Navigation/index.css
@@ -3,9 +3,10 @@
   list-style: none; /* remove bullet points */
   padding: 0px;
   width: 125px;
-  margin-top: 20px;
+  margin: 0px;
   /* margin-left: 20px; */
 }
+
 .wd-navigation li {
   padding-left: 10px;
   margin-bottom: 10px; /* add space between list items */
